--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "name": "repo-frontend",
+  "name": "motorsport",
   "version": "1.0.0",
+  "description": "motorsport",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "tomassachini@hotmail.com",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
+    "express": "^4.18.2",
+    "googleapis": "^105.0.0"
+  }
 }
